--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </div>
 
     <div class="menu-container">
-        <a href="bai1-may-phat-dien.html" class="menu-item item-generator">
+        <a href="may-phat-dien_AC_good.html" class="menu-item item-generator">
             <div class="icon-box"><i class="fa-solid fa-bolt"></i></div>
             <div class="text-box">
                 <span class="title">Máy phát điện xoay chiều</span>
@@ -115,7 +115,7 @@
             <div class="arrow"><i class="fa-solid fa-chevron-right"></i></div>
         </a>
 
-        <a href="do_e_r.html" class="menu-item item-optics">
+        <a href="do_e_r_good.html" class="menu-item item-optics">
             <div class="icon-box"><i class="fa-solid fa-lightbulb"></i></div>
             <div class="text-box">
                 <span class="title">Thí nghiệm mạch điện một chiều - Pin</span>
@@ -124,7 +124,7 @@
             <div class="arrow"><i class="fa-solid fa-chevron-right"></i></div>
         </a>
 
-        <a href="hien_tuong_cam_ung_dien_tu.html" class="menu-item item-circuit">
+        <a href="hien_tuong_cam_ung_dien_tu_good.html" class="menu-item item-circuit">
             <div class="icon-box"><i class="fa-solid fa-microchip"></i></div>
             <div class="text-box">
                 <span class="title">Hiện tượng cảm ứng điện từ</span>
