--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </div>
 
     <div class="menu-container">
-        <a href="may-phat-dien_AC_good.html" class="menu-item item-generator">
+        <a href="may_phat_dien_AC_good.html" class="menu-item item-generator">
             <div class="icon-box"><i class="fa-solid fa-bolt"></i></div>
             <div class="text-box">
                 <span class="title">Máy phát điện xoay chiều</span>
@@ -140,4 +140,5 @@
     </div>
 
 </body>
+
 </html>
