--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="arrow"><i class="fa-solid fa-chevron-right"></i></div>
         </a>
 
-        <a href="do_e_r_good.html" class="menu-item item-optics">
+        <a href="do_e_r_good.html" class="menu-item item-circuit">
             <div class="icon-box"><i class="fa-solid fa-lightbulb"></i></div>
             <div class="text-box">
                 <span class="title">Thí nghiệm mạch điện một chiều - Pin</span>
@@ -125,20 +125,44 @@
         </a>
 
         <a href="hien_tuong_cam_ung_dien_tu_good.html" class="menu-item item-circuit">
-            <div class="icon-box"><i class="fa-solid fa-microchip"></i></div>
+            <div class="icon-box"><i class="fa-solid fa-magnet"></i></div>
             <div class="text-box">
                 <span class="title">Hiện tượng cảm ứng điện từ</span>
                 <span class="subtitle">Bài 12: Cảm ứng điện từ - Faraday - Lenz</span>
             </div>
             <div class="arrow"><i class="fa-solid fa-chevron-right"></i></div>
         </a>
+<a href="dien_truong_duong_suc.html" class="menu-item item-electric-field">
+            <div class="icon-box"><i class="fa-solid fa-bolt-lightning"></i></div>
+            <div class="text-box">
+                <span class="title">Đường sức điện trường</span>
+                <span class="subtitle">Lý 11: Điện trường</span>
+            </div>
+            <div class="arrow"><i class="fa-solid fa-chevron-right"></i></div>
+        </a>
+<a href="nhiem_dien_huong_ung.html" class="menu-item item-generator">
+            <div class="icon-box"><i class="fa-solid fa-plus-minus"></i></div>
+            <div class="text-box">
+                <span class="title">Nhiễm điện do hưởng ứng</span>
+                <span class="subtitle">Lý 11: Nhiễm điện</span>
+            </div>
+            <div class="arrow"><i class="fa-solid fa-chevron-right"></i></div>
+        </a>
+<a href="nhiem_dien_tiep_xuc_good.html" class="menu-item item-generator">
+            <div class="icon-box"><i class="fa-solid fa-plus-minus"></i></div>
+            <div class="text-box">
+                <span class="title">Nhiễm điện do tiếp xúc</span>
+                <span class="subtitle">Lý 11: Nhiễm điện</span>
+            </div>
+            <div class="arrow"><i class="fa-solid fa-chevron-right"></i></div>
+        </a>
+
     </div>
 
     <div class="footer">
-        &copy; 2026 - Tác giả: [Tên của bạn]<br>
+        &copy; 2026 - Tác giả: [NVH-DTTH]<br>
         Trường THPT Hùng Vương
     </div>
 
 </body>
-
 </html>
