--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <div class="header">
         <h1>Hệ Thống Mô Phỏng Vật Lý</h1>
-        <p>Sáng kiến kinh nghiệm - Bộ sách Chân trời sáng tạo</p>
+        <p>Nâng cao năng lực số - Cá nhân hóa người học</p>
     </div>
 
     <div class="menu-container">
@@ -182,3 +182,4 @@
 
 </body>
 </html>
+
