--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Kho Học Liệu Số - Vật Lý THPT</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />   
+ <style>
         :root {
             --bg: #f0f2f5;
             --primary: #2c3e50;
@@ -109,7 +110,11 @@
             text-align: center;
             line-height: 1.6;
         }
-    </style>
+.icon-box .material-symbols-outlined, .icon-box svg {
+    color: #f39c12; /* Màu cam đặc trưng của LDR */
+}
+    
+</style>
 </head>
 <body>
 
@@ -119,6 +124,32 @@
     </div>
 
     <div class="menu-container">
+
+<a href="ung-dung-LDR-1-chieu.html" class="menu-item item-generator">
+            <div class="icon-box">
+  <svg width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+    <circle cx="12" cy="12" r="9"></circle>
+    <path d="M7 12h2l2-3 2 6 2-3h2"></path>
+    <path d="M18 5l2-2"></path>
+    <path d="M14 2l1 2"></path>
+  </svg>
+</div>
+            <div class="text-box">
+                <span class="title">Ứng dụng cảm biến ánh sáng (cơ bản)</span>
+                <span class="subtitle">Mô phỏng ứng dụng LDR vào bật tắt đèn tự động</span>
+            </div>
+            <div class="arrow"><i class="fa-solid fa-chevron-right"></i></div>
+        </a>
+
+        <a href="ung-dung-LDR-2-chieu.html" class="menu-item item-circuit">
+            <div class="icon-box"><span class="material-symbols-outlined">sensors</span></div>
+            <div class="text-box">
+                <span class="title">Ứng dụng cảm biến ánh sáng (nâng cao)</span>
+                <span class="subtitle">Mô phỏng ứng dụng LDR vào bật tắt đèn tự động</span>
+            </div>
+            <div class="arrow"><i class="fa-solid fa-chevron-right"></i></div>
+        </a>
+
         <a href="may_phat_dien_AC_good.html" class="menu-item item-generator">
             <div class="icon-box"><i class="fa-solid fa-bolt"></i></div>
             <div class="text-box">
