--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
     <div class="menu-container">
 
-<a href="ung-dung-LDR-1-chieu.html" class="menu-item item-generator">
+<a href="ung-dug-LDR-1-chieu.html" class="menu-item item-generator">
             <div class="icon-box">
   <svg width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
     <circle cx="12" cy="12" r="9"></circle>
@@ -213,4 +213,5 @@
 
 </body>
 </html>
+
 
